--- a/package.json
+++ b/package.json
@@ -5,10 +5,15 @@
   "private": true,
   "main": "dist/index.js",
   "dependencies": {
-    "@material-ui/core": "4.3.2",
+    "@apollo/react-hooks": "^3.1.3",
+    "@material-ui/core": "4.9.5",
     "@material-ui/icons": "4.2.1",
+    "apollo-boost": "^0.4.7",
     "axios": "^0.19.2",
+    "bcrypt": "^4.0.1",
     "classnames": "2.2.6",
+    "dotenv": "^8.2.0",
+    "graphql": "^14.6.0",
     "history": "4.9.0",
     "moment": "2.24.0",
     "node-sass": "4.12.0",
@@ -27,17 +32,17 @@
     "@babel/plugin-proposal-class-properties": "7.5.5",
     "@babel/preset-env": "7.5.5",
     "@babel/preset-react": "7.0.0",
+    "@storybook/addon-actions": "^5.3.13",
+    "@storybook/addon-links": "^5.3.13",
+    "@storybook/addons": "^5.3.13",
+    "@storybook/preset-create-react-app": "^1.5.2",
+    "@storybook/react": "^5.3.13",
     "eslint-config-prettier": "6.0.0",
     "eslint-plugin-prettier": "3.1.0",
     "eslint-plugin-react": "7.14.3",
     "gulp": "4.0.2",
     "gulp-append-prepend": "1.0.8",
-    "prettier": "1.18.2",
-    "@storybook/addon-actions": "^5.3.13",
-    "@storybook/addon-links": "^5.3.13",
-    "@storybook/addons": "^5.3.13",
-    "@storybook/preset-create-react-app": "^1.5.2",
-    "@storybook/react": "^5.3.13"
+    "prettier": "1.18.2"
   },
   "optionalDependencies": {
     "typescript": "3.5.3"
